--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,6 +1,6 @@
 @import "./utils/variables";
-@import "./utils/mixin";
-@import "./utils/placeholder";
+@import "./utils/mixins";
+@import "./utils/placeholders";
 @import "./base/base";
 @import "./components/studio/header";
 @import "./components/studio/hero";
