--- a/SASS/portfolio.scss
+++ b/SASS/portfolio.scss
@@ -1,6 +1,6 @@
-@import "./utils/mixin";
-@import "./utils/placeholder";
 @import "./utils/variables";
+@import "./utils/mixins";
+@import "./utils/placeholders";
 @import "./base/base";
 @import "./components/studio/header";
 @import "./components/portfolio/button";
