--- a/SASS/components/portfolio/_business.scss
+++ b/SASS/components/portfolio/_business.scss
@@ -1,6 +1,5 @@
 .overlay:hover{
-width: 100%;
-height: 100%;
+  @extend %thumb;
  background-color: rgba(33, 150, 243, 0.9);
  position: absolute;
 top: 0;
@@ -21,12 +20,11 @@ transition: background-color 1s ease;
 .projects div{
   box-sizing: border-box;
 background:  getColor('background');
-border: 1px solid #EEEEEE;
+@include bordered(#EEEEEE);
 }
 .works-list{
-  display: flex;
+  @extend %flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   margin: 56px auto 94px auto;
   &__div{
   margin-bottom: 30px;
@@ -49,13 +47,9 @@ margin: 20px 24px 4px 24px;
 color:  getColor('text');
 }
 &__text{
+    @include fonts($line-height:1.55, $letter-spacing:0.54px, $font-size:18px, $text-align:left);
   color:  getColor('color');
 font-family: getFont('basic');
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 1.55; 
-letter-spacing: 0.54px;
 position: absolute;
 opacity: 0;
 top: 63px;
@@ -64,10 +58,7 @@ left: 24px;
 right: 24px;
 }
 &__type{
-font-weight: 400;
-font-size: 16px;
-line-height: 30px;
-letter-spacing: 0.03em;
+  @include fonts($line-height:30px, $letter-spacing:0.03em, $text-align:left);
 margin: 4px 24px 20px 24px;
 color: getColor('svg');
 }
@@ -79,10 +70,8 @@ color: getColor('svg');
   height: 294px;
 }
 &__thumb > img{
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+  @extend %thumb;
+  @extend %object;
+    display: block;
 }
 }
