--- a/SASS/components/studio/_features.scss
+++ b/SASS/components/studio/_features.scss
@@ -2,8 +2,7 @@
   width: 1200px;
   margin: 0 auto;
   &-wrapper{
-  display: flex;
-  justify-content: space-between;
+  @extend %flex;
   width: 1200px;
   }
   &-wrapper-list:nth-child(n){
@@ -18,30 +17,21 @@ background:  getColor('third-background');
 }
 }
 .advantages{
-  padding-top: 94px;
-  padding-bottom: 94px;
+  @extend %padding-94;
 }
 .features-list {
-  display: flex;
-  justify-content: space-between;
+  @extend %flex;
   &__item{
   width: 270px;
 }
 &__subtitle {
+  @include fonts(700, 14px, 0.03em, $text-transform:uppercase, $text-align:left);
   margin-top: 30px;
-  font-weight: 700;
-  font-size: 14px;
   margin-bottom: 10px;
-  line-height: 1.15;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   color:  getColor('text');
 }
 &__paragraf {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
+    @include fonts($font-size:14px, $letter-spacing:0.03em, $line-height:1.7, $text-align:left);
   color:  getColor('svg');
 }
 }
