--- a/SASS/components/studio/_modal.scss
+++ b/SASS/components/studio/_modal.scss
@@ -1,14 +1,11 @@
 .backdrop{
+      @extend %center;
+      @extend %thumb;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
     background-color: rgba(0,0,0, 0.3);
     z-index: 99;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .modal{
     position: fixed;
@@ -19,17 +16,13 @@
 background:  getColor('color');
 box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 &__btn-submit{
+    @include fonts(700, $letter-spacing:0.96px, $line-height:30px);
   width: 200px;
 height: 50px;
 border-radius: 4px;
 background:  getColor('hover');
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 color:  getColor('background');
-text-align: center;
-font-size: 16px;
-font-weight: 700;
-line-height: 30px; 
-letter-spacing: 0.96px;
 border: none;
 margin: 30px 124px 0 124px;
 }
@@ -40,12 +33,8 @@ margin: 30px 124px 0 124px;
   color:   getColor('hover');
 }
 &__title{
+    @include fonts(700, $letter-spacing:0.6px, $font-size:20px);
     color:  getColor('text');
-text-align: center;
-font-size: 20px;
-font-weight: 700;
-line-height: normal;
-letter-spacing: 0.6px;
 margin-bottom: 12px;
 }
 &__checkbox{
@@ -62,14 +51,14 @@ margin-bottom: 12px;
     width: 448px;
 height: 40px;
 border-radius: 4px;
-border: 1px solid  getColor('border-modal');
+@include bordered(getColor('border-modal'));
 outline: none;
 padding: 12px 0 12px 42px;
 cursor: pointer;
 }
 &__input:hover, &__input:focus{
   border-radius: 4px;
-border: 1px solid  getColor('hover');
+@include bordered(getColor('hover'));
 }
 &__icon:hover, &__icon:focus{
   fill:  getColor('hover');
@@ -84,13 +73,9 @@ border: 1px solid  getColor('hover');
     transition: fill 250ms ease;
 }
 &__label{
-    display: flex;
-    flex-direction: column;
+    @extend %column;
+    @include fonts($font-size:12px, $letter-spacing:0.12px, $text-align:left);
     color:  getColor('svg');
-font-size: 12px;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 0.12px;
   position: relative;
 }
 &__icon{
@@ -102,11 +87,8 @@ letter-spacing: 0.12px;
   cursor: pointer;
 }
 &__textarea::placeholder{
+  @include fonts($font-size:12px, $letter-spacing:0.12px, $text-align:left);
   color: rgba(117, 117, 117, 0.50);
-font-size: 12px;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 0.12px;
 } 
 &__textarea{
   resize: none;
@@ -127,9 +109,7 @@ pointer-events: none;
   right: 8px;
   width: 30px;
   height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %center;
   border-radius: 50%;
 border-color: rgba(0, 0, 0, 0.10);
 background-color:  getColor('color');
