--- a/SASS/components/studio/_team.scss
+++ b/SASS/components/studio/_team.scss
@@ -1,37 +1,23 @@
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  @extend %padding-94;
   background-color:  getColor('third-background');
   &__title {
+    @include fonts(700, 36px, 0.03em);
   margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17px;
-  text-align: center;
-  letter-spacing: 0.03em;
   color:  getColor('text');
 }
 }
 .team-list {
-  display: flex;
-  justify-content: space-between;
+  @extend %flex;
   width: 1200px;
   margin:0 auto;
   &__text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
+    @include fonts($letter-spacing:0.03em, $line-height:1.19);
   color:  getColor('svg');
 }
 &__name {
-  font-weight: 500;
+  @include fonts(500, $letter-spacing:0.03em, $line-height:1.19);
   margin-bottom: 10px;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
   color:  getColor('text');
 }
 &__item{
@@ -49,15 +35,12 @@
 }
 &__thumb > img{
   display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
+  @extend %thumb;
+  @extend %object;
 }
 }
-.links-list{
-  display: flex;
-  justify-content: space-between;
+.links-list{ 
+  @extend %flex;
   width: 206px;
   margin: 16px auto 0;
   &__svg{
@@ -66,9 +49,7 @@
   fill:  getColor('border-secondary');
 }
 &__item{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @extend %center;
   width: 44px;
   height: 44px;
 }
